--- a/frontend/src/AppleVisualizer.scss
+++ b/frontend/src/AppleVisualizer.scss
@@ -23,6 +23,22 @@
 
     .apple-group {
         margin-top: 20px;
+
+        .apple-divison-row {
+        display: flex;
+        padding: 5px 10px;
+        border: 2px solid #4caf50;
+        border-radius: 999px; // makes it oval
+        background-color: #e8f5e9;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: all 0.2s ease-in-out;
+        margin-bottom: 5px;
+      }
+      .apple-remainder-row {
+        display: flex;
+        padding: 5px 10px;
+        transition: all 0.2s ease-in-out;
+      }
     }
   }
 }
