--- a/frontend/src/AppleVisualizer.scss
+++ b/frontend/src/AppleVisualizer.scss
@@ -2,6 +2,14 @@
   padding: 20px;
   text-align: center;
 
+  background-image: url('/assets/forest-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  min-width: 100vw;
+  box-sizing: border-box;
+
   .mode-selector {
     margin-bottom: 15px;
 
