--- a/frontend/src/AppleVisualizer.scss
+++ b/frontend/src/AppleVisualizer.scss
@@ -18,34 +18,43 @@
       padding: 5px;
     }
   }
-
-  .basket {
-    margin-top: 10px;
-    padding: 5px 20px 20px 20px;
-    border: 4px solid #8B4513;
-    border-radius: 12px;
-    background-color: #DEB887;  
-    display: inline-block;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  
+  .basket-wrapper {
     position: relative;
+    width: 100%;
+    height: 80vh;
+    display: flex; 
+    justify-content: center;
+    align-items: flex-start;
 
-    .apple-group {
-        margin-top: 20px;
+    .basket {
+      margin-top: 10px;
+      padding: 5px 20px 20px 20px;
+      border: 4px solid #8B4513;
+      border-radius: 12px;
+      background-color: #DEB887;  
+      display: inline-block;
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+      transform-origin: top center;
 
-        .apple-divison-row {
-        display: flex;
-        padding: 5px 10px;
-        border: 2px solid #4caf50;
-        border-radius: 999px; // makes it oval
-        background-color: #e8f5e9;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        transition: all 0.2s ease-in-out;
-        margin-bottom: 5px;
-      }
-      .apple-remainder-row {
-        display: flex;
-        padding: 5px 10px;
-        transition: all 0.2s ease-in-out;
+      .apple-group {
+          margin-top: 20px;
+
+          .apple-divison-row {
+          display: flex;
+          padding: 5px 10px;
+          border: 2px solid #4caf50;
+          border-radius: 999px; // makes it oval
+          background-color: #e8f5e9;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          transition: all 0.2s ease-in-out;
+          margin-bottom: 5px;
+        }
+        .apple-remainder-row {
+          display: flex;
+          padding: 5px 10px;
+          transition: all 0.2s ease-in-out;
+        }
       }
     }
   }
